# SPMV

./: .gitignore  CMakeLists.txt  jobscript  lldb_commands.txt  pcmd.sh  pullandrun.sh  shared  t.txt  temp.txt
.cache/clangd/index/: csr.hpp.0EF117F240BC4FE0.idx  file_reader.c.9D6E3ADE5937BB7E.idx  file_reader.h.B277C60B25A3ED69.idx  graph.h.6CDC169BEFD18ACF.idx  graph.hpp.B51BE98EF279E61C.idx  graph.hpp.E8588E84D1FFFA86.idx  main.c.820A533EB8DF1258.idx  main.c.A614493B2F1B0D58.idx  main.c.C1894208D85AD054.idx  main.c.C8595B0A1386AB9B.idx  main.c.E576AC79E0DA826E.idx  main.cpp.6F9537F16B7D0DA1.idx  main.cpp.AEF2FA468FAA967C.idx  main_1a.c.73EED6E440A4DD4B.idx  main_1b.c.17B33DA75003B11B.idx  main_dist.cpp.9C2C3A1461C09E25.idx  main_dist1a.cpp.E0633ACC7C4C4077.idx  main_dist1b.cpp.CC16C0A43AEB055B.idx  main_seq.cpp.F6F9074EA89C2399.idx  main_shared.cpp.681A7FA8E397FA8A.idx  matmul.c.53CE2E720DCABA19.idx  matrix.h.7EA490005F5AD9C4.idx  matrix.h.91B6A2D21483E727.idx  matrix.h.DB38E5A5A0CDC3EC.idx  matrix.h.E68F70CA652234E9.idx  mtx.c.029B25B2B9A354FA.idx  mtx.h.61F48293314E2F23.idx  mtx.hpp.F03D5C302FDD0037.idx  read_file.c.6493669B05626D43.idx  read_file.c.B36EA6E564D44C74.idx  read_file.c.DBC59313B578F38E.idx  read_file.h.A42FD75872C6F779.idx  read_file.h.AF71977B31DEC79A.idx  read_file.h.D846440C94A05287.idx  spmv.c.0F27D69AE85E389C.idx  spmv.c.75BB568BB52D3881.idx  spmv.c.C936449A8F43D0CC.idx  spmv.cpp.2A2957D90CC5CE4A.idx  spmv.h.B5A48C37FCD24786.idx  spmv.hpp.6C4D642B83703C88.idx  (+4 more)
include/: csr.hpp  graph.h  graph.hpp  mtx.h  mtx.hpp  spmv.h
results/multi/rome16q/: 1a_Long_Coup_dt0_3_nodes_1_tasks_16_threads-836400-stdout.txt  1a_dielFilterV3real_6_nodes_1_tasks_16_threads-836395-stdout.txt  1d_af_shell10_5_nodes_1_tasks_16_threads-835976-stdout.txt
src/: main.c  main.cpp  main_1a.c  main_1b.c  main_dist.cpp  main_dist1a.cpp  main_dist1b.cpp  main_seq.cpp  main_shared.cpp  mtx.c  spmv.c  spmv.cpp  spmv.hpp  strategyA.c  strategyB.c  strategyC.c  strategyD.c  strategySequential.c  t.cpp
src/.cache/clangd/index/: main.c.C8595B0A1386AB9B.idx  matrix.h.7EA490005F5AD9C4.idx  read_file.c.DBC59313B578F38E.idx  read_file.h.A42FD75872C6F779.idx  spmv.c.0F27D69AE85E389C.idx  test.c.4C73A2D10DCC208B.idx
src/1a/: main.c  read_file.c  spmv.h  test.c
src/1b/: main.c  matrix.h  read_file.h
src/test/: main.c
test/: test_spmv.cpp
